<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.udacitynanodegreeapps.android.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#f8f3fc">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_heading"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:layout_weight="0.06"
        android:textAlignment="center" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app1_name"
        android:id="@+id/button1"
        android:layout_gravity="center_horizontal"
        android:onClick="displayInfo"
        android:layout_weight="0.06" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app2_name"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:onClick="displayInfo"
        android:layout_weight="0.06" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app3_name"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:onClick="displayInfo"
        android:layout_weight="0.06" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app4_name"
        android:id="@+id/button4"
        android:layout_gravity="center_horizontal"
        android:onClick="displayInfo"
        android:layout_weight="0.06" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app5_name"
        android:id="@+id/button5"
        android:layout_gravity="center_horizontal"
        android:onClick="displayInfo"
        android:layout_weight="0.06" />

    <Button
        android:theme="@style/MyButtonTheme"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone_name"
        android:id="@+id/button6"
        android:layout_gravity="center_horizontal"
        android:onClick="displayInfo"
        android:layout_weight="0.06" />
</LinearLayout>
